modify get endpoint
