# api/openapi/api.yaml
@@ -79,6 +79,13 @@ paths:
             nullable: true
           description: ID of view listing all project data assets. E.g. for Synapse this would be the Synapse ID of the fileview listing all data assets for a given project.(i.e. master_fileview in config.yml)
           required: false
+        - in: query
+          name: return_excel
+          schema:
+            type: boolean
+            nullable: true
+          description: If true, this would return an Excel spreadsheet.(This approach would avoid sending metadata to Google sheet APIs)
+          required: false
       operationId: api.routes.get_manifest_route
       responses:
         "201":
